# QuantIQ

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  grafana_dashboard.json  main.py  pyproject.toml  train.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 15639881888f_add_alert_trigger_columns.py  1ffb20394fc4_add_saved_strategies.py  31f4439fab74_add_prediction_logs_table.py  3d7629451f7d_initial_schema.py  887a33df9c3e_add_strategy_logs_table.py  99690d55ee16_add_user_verification_columns.py  bbdbf37359be_add_subscription_and_message_limit_.py  ea96300d7e57_add_asset_class_columns.py
backend/: Dockerfile  README.md  supervisord.conf
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/config/: metrics.py  settings.py
backend/app/database/: crud.py  models.py  session.py
backend/app/graphql/: schema.py
backend/app/schemas/: schemas.py
backend/app/services/: celery_app.py  cloudinary_service.py  email_service.py  gemini.py
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AIAnalyst.tsx  ChartChatbot.tsx  Logo.tsx  LogoLoop.css  LogoLoop.tsx  Navbar.tsx  PriceAlerts.tsx  RechargeModal.tsx  Sparkline.tsx  StockChart.tsx  TickerTape.tsx  TrendingHub.tsx  WatchlistSidebar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  UpgradePage.tsx
worker/: README.md  worker.py
