[project]
name = "quantiq"
version = "0.1.0"
description = "Real-time stock dashboard using free-tier cloud services and Gemini 2.5 Flash"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "websockets>=16.1.1",
    "sqlalchemy[mypy]>=2.0.28",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.3",
    "yfinance>=0.2.37",
    "pandas>=2.2.1",
    "pandas-ta>=0.3.14b",
    "pydantic-settings>=2.14.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "razorpay>=2.0.1",
    "httpx>=0.27.0",
    "cloudinary>=1.38.0",
    "strawberry-graphql[fastapi]>=0.219.0",
    "celery>=5.3.6",
    "aiokafka>=0.10.0",
    "pyjwt>=2.8.0",
    "onnxruntime>=1.17.0",
    "huggingface_hub>=0.20.0",
    "google-genai>=2.10.0",
    "pillow>=12.3.0",
    "scikit-learn>=1.4.0",
    "skl2onnx>=0.5.0",
]
